--- a/index.html
+++ b/index.html
@@ -2,17 +2,259 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>X BURGER</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body, html {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background-color: #f0f2f5;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: auto;
+      background-color: white;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .header {
+      text-align: center;
+      padding: 16px;
+    }
+
+    .header h1 {
+      color: #d33a2d;
+    }
+
+    .header p {
+      color: #777;
+      font-size: 14px;
+    }
+
+    .sticky-container {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      background-color: white;
+      padding: 16px 0;
+      z-index: 1;
+    }
+
+    .search {
+      padding: 0 16px 16px;
+    }
+
+    .search input {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    .cart-button {
+      background-color: #d33a2d;
+      color: white;
+      padding: 16px;
+      border: none;
+      width: 100%;
+      border-radius: 0;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 50;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 500px;
+      border-radius: 12px;
+    }
+
+    .close-button {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close-button:hover,
+    .close-button:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .cart-item-details {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .remove-from-cart {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    #cart-total {
+      text-align: right;
+      margin-top: 16px;
+      font-size: 18px;
+    }
+
+    .checkout-button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px;
+      border: none;
+      width: 100%;
+      border-radius: 8px;
+      font-weight: bold;
+      font-size: 16px;
+      margin-top: 16px;
+      cursor: pointer;
+    }
+
+    .cart-button span {
+      position: absolute;
+      right: 16px;
+      top: 8px;
+      background-color: yellow;
+      color: black;
+      font-size: 12px;
+      padding: 2px 6px;
+      border-radius: 50%;
+    }
+
+    .tabs {
+      display: flex;
+      padding: 0 16px 16px;
+      gap: 8px;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
+    }
+
+    .tabs::-webkit-scrollbar {
+      display: none;
+    }
+
+    .tabs button {
+      flex: 1;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #eee;
+      background-color: #fff3e0;
+      font-weight: bold;
+      color: #d33a2d;
+      cursor: pointer;
+    }
+
+    .section-title {
+      padding: 0 16px;
+      margin-top: 16px;
+    }
+
+    .section-title h2 {
+      color: #d33a2d;
+    }
+
+    .section-title p {
+      color: #777;
+      font-size: 13px;
+      margin-bottom: 8px;
+    }
+
+    .product-card {
+      margin: 16px;
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid #eee;
+      display: flex;
+      min-height: 120px;
+    }
+
+    .product-card img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+
+    .product-details {
+      padding: 12px;
+    }
+
+    .product-details h3 {
+      font-size: 16px;
+      margin-bottom: 4px;
+    }
+
+    .product-details p {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .price-add {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding: 12px;
+      margin-left: auto;
+    }
+
+    .price {
+      color: #d33a2d;
+      font-weight: bold;
+      font-size: 16px;
+    }
+
+    .add-btn {
+      background-color: #ffab40;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 13px;
     }
   </style>
 </head>
-<body class="overflow-hidden">
+<body>
 
   <!-- Sección principal en pantalla completa -->
   <section class="w-screen h-screen">
@@ -23,5 +265,47 @@
     />
   </section>
 
+  <!-- Sección inferior: app interactiva -->
+  <div class="header">
+    <h1>XBURGER</h1>
+    <p>Las mejores hamburguesas</p>
+  </div>
+
+  <div class="sticky-container">
+    <div class="search">
+      <input type="text" placeholder="🔍 Buscar platillos...">
+    </div>
+
+    <div class="tabs">
+      <button data-category="all">Todos</button>
+      <button data-category="Tacos">Tacos</button>
+      <button data-category="Quesadillas">Quesadillas</button>
+      <button data-category="Burritos">Burritos</button>
+      <button data-category="Appetizers">Appetizers</button>
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="product-container">
+      <!-- Aquí se insertan dinámicamente los productos -->
+    </div>
+  </div>
+
+  <button class="cart-button">
+    🛒 Ver Carrito
+    <span id="cart-count">0</span>
+  </button>
+
+  <div id="cart-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h2>Carrito de Compras</h2>
+      <div id="cart-items"></div>
+      <div id="cart-total"></div>
+      <button class="checkout-button">Pagar</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
