--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -254,7 +254,7 @@
     }
   </style>
 </head>
-<body>
+<body class="overflow-auto">
 
   <!-- Sección principal en pantalla completa -->
   <section class="w-screen h-screen">
@@ -309,3 +309,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
