--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
     body, html {
       margin: 0;
       padding: 0;
+      scroll-behavior: smooth;
+    }
+
+    .zoom-header {
+      animation: zoomIn 3s ease-in-out forwards;
+    }
+
+    @keyframes zoomIn {
+      0% {
+        transform: scale(1.2);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
   </style>
 </head>
-<body class="overflow-hidden">
+<body class="overflow-auto bg-black text-white">
 
-  <!-- Sección principal en pantalla completa -->
+  <!-- Header con zoom -->
+  <header class="zoom-header text-center py-6 text-4xl font-bold bg-red-600">
+    ¡Bienvenido a X BURGER!
+  </header>
+
+  <!-- Imagen a pantalla completa -->
   <section class="w-screen h-screen">
     <img 
       src="BURGER-LANDING.jpg" 
@@ -22,7 +43,22 @@
       class="w-full h-full object-cover"
     />
   </section>
-<iframe src="menu-mex.vercel.app" width="100%" height="600"></iframe>
+
+  <!-- Iframe con scroll permitido -->
+  <section class="w-full">
+    <iframe 
+      src="https://menu-mex.vercel.app" 
+      width="100%" 
+      height="600"
+      class="border-none"
+    ></iframe>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center py-4 bg-gray-900 text-sm">
+    © 2025 X BURGER. Todos los derechos reservados.
+  </footer>
 
 </body>
 </html>
+
