--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       }
     }
 
-    /* Opcional: scroll “a lo presentación” */
     section {
       scroll-snap-align: start;
     }
@@ -39,20 +38,20 @@
     }
   </style>
 </head>
-<body class="bg-black text-white overflow-hidden">
+<body class="bg-black text-white">
 
-  <!-- Contenedor de scroll seccionado -->
-  <main>
-    <!-- Imagen a pantalla completa -->
-    <section class="h-screen w-screen">
+  <main class="scroll-snap-type-y mandatory overflow-y-scroll h-screen">
+
+    <!-- Imagen con altura real de 1600px -->
+    <section class="w-screen" style="height: 1600px;">
       <img 
         src="BURGER-LANDING.jpg" 
         alt="X Burger Combos Infernal" 
-        class="w-full h-full object-cover"
+        class="w-full h-full object-contain"
       />
     </section>
 
-    <!-- Sección con iframe -->
+    <!-- Sección del menú -->
     <section class="h-screen w-screen bg-white">
       <iframe 
         src="https://menu-mex.vercel.app" 
@@ -60,13 +59,6 @@
         height="100%"
         class="border-none"
       ></iframe>
-    </section>
-
-    <!-- Footer -->
-    <section class="h-screen w-screen bg-gray-900 flex items-center justify-center">
-      <footer class="text-center text-sm text-white">
-        © 2025 X BURGER. Todos los derechos reservados.
-      </footer>
     </section>
 
   </main>
